--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "immer": "^5.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-input-range": "^1.3.0",
+    "react-input-slider": "^5.1.4",
     "react-scripts": "3.3.0"
   },
   "scripts": {
